[SKY-28]: Add API DELETE endpoint for pilot
